# fullscreen4wikicommons

./: LICENSE  README.md  mail.py  main.py  make_exe.py  make_installer.py  pyproject.toml
