[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fullscreen4wikicommons"
version = "1.0.0"
description = "Full Screen image viewer for Wikimedia Commons"
dependencies = ["pyqt6", "PyQT6-WebEngine", "pywikibot"]

[tool.setuptools]
py-modules = ["main"]